--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Puspendu Bera",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
